chore: adiciona pipeline de CI para atividade de IEC
